--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,8 +1,8 @@
 a {
-    text-decoration: none;      /* Убирает подчеркивание для ссылок */
+    text-decoration: none;      /* убираем подчеркивание */
 }
 
 a:hover {
-    text-decoration: underline; /* Добавляем подчеркивание при наведении курсора на ссылку */
-    color: blue;                 /* Ссылка синего цвета */
+    text-decoration: underline; /* подчеркивание при наведении курсора*/
+    color: blue;
 }
