--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,16 +1,7 @@
-a.disabled {
-    pointer-events: none;
-    cursor: default;
-    color: black;
+body {
+    margin: 0;
+    background-size: 19200px 1080px;
+    background-size: 100% 100%;
+    background: url(../img/background-1-1920x1080.jpg) no-repeat;
+    /*font: 13px/18px "Helvetica Neue", Helvetica, Arial, sans-serif;*/
 }
-
-a .custom-ref {
-    text-decoration: none;      /* убираем подчеркивание */
-}
-
-a .custom-ref:hover {
-    text-decoration: underline; /* подчеркивание при наведении курсора*/
-    color: blue;
-}
-
-.dropdown-menu a.disabled{pointer-events:none;cursor:default;color:darkgrey;}
