HTML markdown upgraded. Added icons.

--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -15,3 +15,23 @@ blockquote {
 .container>.page-header, .container-fluid>.page-header {
     margin-top: 0px;
 }
+
+
+/******************************************************************************
+ * Font Awesome
+ ******************************************************************************/
+.fa-ban {
+    color: #d51920; /* Цвет */
+    opacity: 0.6;   /* Полупрозрачность */
+}
+
+.fa-ul {
+    margin-left: 0; /* Отступ слева */
+}
+.fa-ul > li {
+    text-indent: 1em; /* Сдвигаем текст вправо */
+}
+.fa-li {
+    left: -0.5em; top: 0.4em; /* Положение иконки */
+    color: #1fa67a; /* Цвет иконок */
+}
