--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -2,6 +2,6 @@ body {
     margin: 0;
     background-size: 19200px 1080px;
     background-size: 100% 100%;
-    background: url(../img/background-1-1920x1080.jpg) no-repeat;
+    background: url(../img/background-1-1920x1080.jpg) no-repeat fixed;
     /*font: 13px/18px "Helvetica Neue", Helvetica, Arial, sans-serif;*/
 }
